--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,11 @@
 {
-  "presets": [ "es2015", "react" ],
-  "plugins": [ "transform-class-properties" ]
+  "presets": [
+    "es2015",
+    "react"
+  ],
+  "env": {
+    "development": {
+      "presets": []
+    }
+  }
 }
