--- a/package.json
+++ b/package.json
@@ -1,70 +1,42 @@
 {
-  "license": "MIT",
-  "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.2.6",
-    "babel-loader": "^7.1.5",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "bootstrap": "^4.1.3",
-    "css-loader": "^0.28.7",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb": "^15.1.0",
-    "eslint-loader": "^2.1.1",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-jsx-a11y": "^5.1.1",
-    "eslint-plugin-react": "^7.11.1",
-    "jquery": "^1.12.4",
-    "mini-css-extract-plugin": "^0.4.5",
-    "normalize.css": "^8.0.1",
-    "popper.js": "^1.14.6",
-    "postcss-apply": "^0.10.0",
-    "postcss-clean": "^1.1.0",
-    "postcss-color-function": "^4.0.1",
-    "postcss-color-hex-alpha": "^3.0.0",
-    "postcss-cssnext": "^3.1.0",
-    "postcss-custom-media": "^6.0.0",
-    "postcss-custom-properties": "^7.0.0",
-    "postcss-custom-selectors": "^4.0.1",
-    "postcss-font-family-system-ui": "^3.0.0",
-    "postcss-font-variant": "^3.0.0",
-    "postcss-loader": "^2.1.6",
-    "postcss-media-minmax": "^3.0.0",
-    "postcss-nested": "^3.0.0",
-    "postcss-nested-ancestors": "^2.0.0",
-    "postcss-nesting": "^6.0.0",
-    "postcss-smart-import": "^0.7.6",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.18.2",
-    "webpack": "^4.26.1",
-    "webpack-cli": "^3.1.1",
-    "webpack-dev-server": "^3.1.4"
-  },
-  "dependencies": {
-    "history": "^4.7.2",
-    "react": "16.0.0",
-    "react-dom": "16.0.0",
-    "react-redux": "^5.0.6",
-    "react-router-dom": "^4.2.2",
-    "redux": "^3.7.2",
-    "redux-logger": "^3.0.6",
-    "redux-promise": "^0.5.3"
-  },
-  "scripts": {
-    "dev": "webpack-dev-server --open --hot",
-    "build": "webpack --progress --hide-modules"
-  },
-  "name": "split_testing_front",
-  "description": "For development: ```$xslt npm run dev ```",
+  "name": "react-redux-template",
   "version": "1.0.0",
-  "main": "webpack.config.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/VectreeTeamA/split_testing_front.git"
+  "main": "index.js",
+  "scripts": {
+    "dev": "webpack",
+    "start": "webpack-dev-server"
   },
-  "bugs": {
-    "url": "https://github.com/VectreeTeamA/split_testing_front/issues"
+  "license": "ISC",
+  "dependencies": {
+    "babel-core": "^6.10.4",
+    "babel-loader": "^6.2.4",
+    "babel-polyfill": "^6.9.1",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.11.1",
+    "babel-register": "^6.9.0",
+    "cross-env": "^1.0.8",
+    "css-loader": "^0.23.1",
+    "expect": "^1.20.1",
+    "node-libs-browser": "^1.0.0",
+    "node-sass": "^3.8.0",
+    "react": "^15.1.0",
+    "react-addons-test-utils": "^15.1.0",
+    "react-dom": "^15.1.0",
+    "react-redux": "^4.4.5",
+    "redux": "^3.5.2",
+    "redux-logger": "^2.6.1",
+    "redux-promise": "^0.5.3",
+    "redux-thunk": "^2.1.0",
+    "sass-loader": "^4.0.0",
+    "style-loader": "^0.13.1",
+    "webpack": "^1.13.1",
+    "webpack-dev-middleware": "^1.6.1",
+    "webpack-dev-server": "^1.14.1",
+    "webpack-hot-middleware": "^2.11.0"
   },
-  "homepage": "https://github.com/VectreeTeamA/split_testing_front#readme"
+  "devDependencies": {
+    "babel-plugin-react-transform": "^2.0.2",
+    "babel-preset-stage-0": "^6.5.0",
+    "react-transform-hmr": "^1.0.4"
+  }
 }
